make nav top spacing align with fixed header

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1024,7 +1024,7 @@ span.bm-cross:last-child {
 .bm-menu-wrap {
   position: fixed;
   height: 100%;
-  margin-top: 1rem;
+  margin-top: 55px;
 }
 /* General sidebar styles */
 .bm-menu {
